@startuml
'https://plantuml.com/class-diagram

class Client{}

class Phone{
    - Brand brand;
}

interface Brand{
    void call();
}

class FoldedPhone{}

class UpRightPhone{}

class Vivo{}

class Xiaomi{}

Phone <.. Client
Brand <.. Client

Brand <|.. Vivo
Brand <|.. Xiaomi

Phone <|-- FoldedPhone
Phone <|-- UpRightPhone

@enduml